set width of form inputs to 100% to avoid overflow

--- a/sass/components/_forms.scss
+++ b/sass/components/_forms.scss
@@ -14,6 +14,7 @@ textarea {
   @include font-size($cd-font-size-base);
   padding: $cd-base-unit;
   border: 1px solid #ccc;
+  width: 100%;
   max-width: 100%;
   color: $cd-dark-grey;
 }
